# Openfoam13---GPU-Offloading-Intel-B70-Pro

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE.md  README.md  SECURITY.md  conclusions.md  hardware.md  references.md
.github/: PULL_REQUEST_TEMPLATE.md
benchmarks/: hardware_results.json  results.md
configs/: fvSolution_cpu_gamg_np16.md  fvSolution_gpu_ogl_np16.md
findings/: 01_pcie_reporting_bug.md  02_bj_blocksize_int_underflow.md  02_bj_maxblocksize_oom.md  03_preconditioner_subdict_syntax.md  04_sycl_device_selector.md  05_sycl_preconditioner_status.md  06_not_published.md  07_not_published.md  08_multigrid_device_lost.md  09_pcie_nvtop_confirmation.md  10_ginkgo2_api_breaks.md  10_ginkgo2_issue_body.md  11_ginkgo_issue_body.md  12_cpu_tuning_no_effect.md  13_stack_update_zeinit_race.md  14_kernel_launch_latency_revision.md  15_scaling_for_spd_preconditioners.md  16_splitcomm_test.md  17_hybrid_solver_test.md  18_v2_adapter_ruled_out.md  19_ginkgo_111_upgrade_bug_persists.md  20_ginkgo_1.11_upgrade.md  21_preconditioner_mapping_bmg.md  22_vram_pressure_gmres_oom.md  23_cross_stack_spmv_b70.md  23_pr168_ginkgo_2.0_migration_test.md  24_pr168_patched_ilu_first_test.md  25_cr_26.18_multirank_pthread_race.md  26_ginkgo_2.0_standalone_sweep.md  27_cr2605_ld_switch_workaround.md  28_gpu_layer_diagnostic_tool_findings.md  29_cr_26.18_root_cause_pure_l0_multiprocess_abort.md  30_post_recovery_clean_multirank_perf.md  (+1 more)
findings/code/: CMakeLists.txt  ginkgo_precond_sweep.cpp
findings/code/ginkgo-patches/: 01-UpdateMatrixValue-interface.hpp  02-Pgm-update_matrix_value-1.11-reference.cpp  03-Multigrid-update_matrix_value-1.11-reference.cpp  amg-reuse-2.0-port.patch
findings/code/gpu-diag/: CMakeLists.txt  compare-mesh.sh  compare-single.sh  diag-ginkgo.cpp  diag-l0.cpp  diag-mixedmg.cpp  diag-mpi-ginkgo-solve.cpp  diag-mpi-ginkgo.cpp  diag-mpi-l0.cpp  diag-mpi-sycl.cpp  diag-profile.cpp  diag-sycl.cpp  gpu-util-v2.sh  ilu-rank-sweep.sh  mg-sweep.sh  precond-vram-sweep.sh  run-fullfloat.sh  run-ilu-monitored.sh  run-timing-util.sh  spec-caching-34m.txt  spec-kart-17m.txt  sweep-fullfloat.sh  test-fulloffload-prof.sh
findings/code/ogl-barrier-patch/: ExecutorHandler.hpp.patched  README.md  barrier.patch
findings/code/ogl-patches/: full-float-stack.patch  mixed-precision-multigrid.patch
(+57 files in other folders)
